<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_value"
        android:title="@string/Location"
        android:defaultValue="@string/pref_value"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:maxLines="1" />

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_value"
        android:entries="@array/pref_units_option" />

</PreferenceScreen>
